--- a/appClub/appClub/Base.lproj/Main.storyboard
+++ b/appClub/appClub/Base.lproj/Main.storyboard
@@ -43,11 +43,11 @@
                         <viewControllerLayoutGuide type="bottom" id="8rH-9F-gUc"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="GHq-z7-A0t">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OTY-RA-mQC">
-                                <rect key="frame" x="254" y="198" width="39" height="30"/>
+                                <rect key="frame" x="168" y="182" width="39" height="30"/>
                                 <state key="normal" title="News">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -56,7 +56,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pqB-G1-D1d">
-                                <rect key="frame" x="247" y="375" width="47" height="30"/>
+                                <rect key="frame" x="164" y="436" width="47" height="30"/>
                                 <state key="normal" title="Events">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -64,9 +64,22 @@
                                     <segue destination="fkl-7H-l7r" kind="show" id="xvz-V9-jXG"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZUd-EP-UPf">
+                                <rect key="frame" x="138" y="298" width="106" height="30"/>
+                                <state key="normal" title="Add News Item">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nSB-mt-phe">
+                                <rect key="frame" x="152" y="555" width="71" height="30"/>
+                                <state key="normal" title="Add Event">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qUV-BT-c70" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -81,8 +94,18 @@
                         <viewControllerLayoutGuide type="bottom" id="7hI-rk-1xq"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="DtG-IE-XVH">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="5jd-or-PIq">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="ao2-Nx-yWS" id="Mck-NR-FwT"/>
+                                    <outlet property="delegate" destination="ao2-Nx-yWS" id="ZzO-Kf-8oX"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
@@ -99,7 +122,7 @@
                         <viewControllerLayoutGuide type="bottom" id="NBs-XD-nfD"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="X0K-MX-OjX">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
